<resources>
    <string name="app_name">SharedLists</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="newUser">New User ?</string>
    <string name="signUp">Signup</string>
    <string name="title_activity_lists">ListsActivity</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="newList">New List</string>
    <string name="addItem">Add Item</string>
    <string name="addMember">Add Member</string>
    <string name="shareList">Share</string>
    <string name="logOut">Logout</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_shared_lists_detail">SharedListsDetailActivity</string>
    <string name="title_activity_lists_detail">ListsDetailActivity</string>
    <string name="title_activity_add_item_to_list">AddItemToListActivity</string>
    <string name="item">Item(Eg. Milk)</string>
    <string name="quantity">Quantity(Eg. 2 lbs)</string>
    <string name="save">Save</string>
    <string name="title_activity_add_member_to_list">AddMemberToListActivity</string>
    <string name="add">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="listItemImage">listItemImage</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="appLogo">application_logo</string>
    <string name="useWeight">Use Weight</string>
</resources>
