<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:phoneNumber="true"
        android:hint="@string/userName" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/userName"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:password="true"
        android:hint="@string/password"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/newUser"
        android:id="@+id/textView"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/login"
        android:layout_toLeftOf="@+id/signup"
        android:layout_toStartOf="@+id/signup"
        android:layout_marginRight="45dp"
        android:layout_marginEnd="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signup"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_marginRight="51dp"
        android:layout_marginEnd="51dp" />

</RelativeLayout>
