<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.sdsu.cs.shruti.sharedlist.SignUpActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/signUpUserName"
        android:hint="@string/userName"
        android:layout_above="@+id/signUpPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpPassword"
        android:hint="@string/password"
        android:layout_above="@+id/signUpConfirmPassword"
        android:layout_alignLeft="@+id/signUpUserName"
        android:layout_alignStart="@+id/signUpUserName"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUpConfirmPassword"
        android:hint="@string/confirmPassword"
        android:layout_above="@+id/signUpUser"
        android:layout_alignLeft="@+id/signUpPassword"
        android:layout_alignStart="@+id/signUpPassword"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUpUser"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
